--- a/pos/pom.xml
+++ b/pos/pom.xml
@@ -16,7 +16,7 @@
 	<description>Checkout System API</description>
 
 	<properties>
-		<java.version>14</java.version>
+		<java.version>11</java.version>
 	</properties>
 
 	<dependencies>
@@ -60,6 +60,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>supermarket-pos</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
